# HomeAssistantLLM

./: .gitignore  README.md  pyproject.toml
Client/: Server.py  TestClient.py  agent.py  client.py  init.py  manifest.json  promptClient.py  services.yaml  voiceAgent.py  voiceClient.py
Server/: Server.py  mcpServer.py  oldServer.py  server.py
mcp/: config.env  pyproject.toml
mcp/Client/: agent.py  voiceAgent.py
mcp/Server/: mcpServer.py  whisper_server.py
mockUp/: package-lock.json  package.json  server.js
mockUp/mockup/: package-lock.json  package.json
mockUp/mockup/public/: walls.csv
mockUp/mockup/src/: App.css  App.js
mockUp/mockup/src/components/: Floor.jsx  Thermostat.jsx  Walls.jsx
