[project]
license = "GPL-3.0"
name = "homeassistantai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "joblib>=1.5.0",
    "scikit-learn==1.6.1",
    "torch>=2.7.0",
    "transformers>=4.51.3",
    "voluptuous>=0.15.2",
]
