[project]
license = "GPL-3.0"
name = "homeassistantai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "mcp[cli]>=1.9.2",
    "numpy>=2.2.5",
    "pvporcupine>=3.0.5",
    "pyttsx3>=2.98",
    "requests>=2.32.3",
    "scipy>=1.15.3",
    "silero-vad>=5.1.2",
    "sounddevice>=0.5.2",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "whisper>=1.1.10",
]
